add record type